{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 17,
  "lineage": "18ef665d-ad5b-67df-9e5b-07b853ece1ce",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkInterfaces/nic-cloud-lab",
            "internal_domain_name_suffix": "1g0yguvltffu3ly04t4imlfore.madx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/publicIPAddresses/pip-cloud-lab",
                "subnet_id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/virtualNetworks/vnet-cloud-lab/subnets/subnet-cloud-lab"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "spaincentral",
            "name": "nic-cloud-lab",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-cloud-lab"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174"
          },
          "dependencies": [
            "azurerm_public_ip.cloud_lab",
            "azurerm_resource_group.cloud_lab",
            "azurerm_subnet.cloud_lab",
            "azurerm_virtual_network.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkInterfaces/nic-cloud-lab|/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud-lab",
            "network_interface_id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkInterfaces/nic-cloud-lab",
            "network_security_group_id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud-lab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.cloud_lab",
            "azurerm_network_security_group.cloud_lab",
            "azurerm_public_ip.cloud_lab",
            "azurerm_resource_group.cloud_lab",
            "azurerm_subnet.cloud_lab",
            "azurerm_virtual_network.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud-lab",
            "location": "spaincentral",
            "name": "nsg-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud-lab/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-cloud-lab",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-cloud-lab",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "nsg-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174"
          },
          "dependencies": [
            "azurerm_network_security_group.cloud_lab",
            "azurerm_resource_group.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/publicIPAddresses/pip-cloud-lab",
            "idle_timeout_in_minutes": 4,
            "ip_address": "158.158.3.229",
            "ip_version": "IPv4",
            "location": "spaincentral",
            "name": "pip-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/virtualNetworks/vnet-cloud-lab/subnets/subnet-cloud-lab",
            "name": "subnet-cloud-lab",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cloud-lab",
            "virtual_network_name": "vnet-cloud-lab"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174",
            "virtual_network_name": "vnet-cloud-lab"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_lab",
            "azurerm_virtual_network.cloud_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cloud_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5283b5d9-99ab-4e4b-af1a-f4fc862cae8c",
            "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/virtualNetworks/vnet-cloud-lab",
            "location": "spaincentral",
            "name": "vnet-cloud-lab",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-cloud-lab",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2a2ffa7d-ec53-41c9-926a-24bb00479174/resourceGroups/rg-cloud-lab/providers/Microsoft.Network/virtualNetworks/vnet-cloud-lab/subnets/subnet-cloud-lab",
                "name": "subnet-cloud-lab",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-cloud-lab",
            "resource_group_name": "rg-cloud-lab",
            "subscription_id": "2a2ffa7d-ec53-41c9-926a-24bb00479174"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_lab"
          ]
        }
      ]
    }
  ]
}